// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente ProductImage Debe de mostrar correctamete la url de la imagen 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://imageToShow.com"
/>
`;

exports[`Pruebas en el componente ProductImage Debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
